practica_final/back.output
Terminals unused in grammar

    INTEGER
    E


State 72 conflicts: 27 shift/reduce
State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: axioma $end

    1 $@1: ε

    2 axioma: '(' sentencia ')' $@1 r_axioma

    3 r_axioma: ε
    4         | axioma

    5 sentencia: SETQ IDENTIF expresion_parentesis
    6          | SETF IDENTIF expresion_parentesis
    7          | DEFUN MAIN '(' ')' lista_sentencias
    8          | PRINT STRING
    9          | PRINC expresion_parentesis
   10          | LOOP WHILE expresion_parentesis DO lista_sentencias
   11          | MAIN
   12          | if
   13          | expresion
   14          | RETURN_FROM expresion

   15 expresion_parentesis: '(' expresion ')'
   16                     | expresion

   17 if: IF expresion_parentesis sentencia_if sentencia_else

   18 sentencia_if: '(' PROGN lista_sentencias ')'
   19             | sentencia

   20 sentencia_else: '(' PROGN lista_sentencias ')'
   21               | sentencia
   22               | ε

   23 lista_sentencias: '(' sentencia ')'
   24                 | '(' sentencia ')' lista_sentencias

   25 expresion: operando
   26          | '+' expresion_parentesis expresion_parentesis
   27          | '-' expresion_parentesis expresion_parentesis
   28          | '*' expresion_parentesis expresion_parentesis
   29          | '/' expresion_parentesis expresion_parentesis
   30          | MOD expresion_parentesis expresion_parentesis
   31          | '=' expresion_parentesis expresion_parentesis
   32          | '<' expresion_parentesis expresion_parentesis
   33          | '>' expresion_parentesis expresion_parentesis
   34          | MET expresion_parentesis expresion_parentesis
   35          | GET expresion_parentesis expresion_parentesis
   36          | DISTINTO expresion_parentesis expresion_parentesis
   37          | AND expresion_parentesis expresion_parentesis
   38          | OR expresion_parentesis expresion_parentesis
   39          | NOT expresion_parentesis

   40 operando: IDENTIF
   41         | NUMBER
   42         | STRING


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 2 7 15 18 20 23 24
    ')' (41) 2 7 15 18 20 23 24
    '*' (42) 28
    '+' (43) 26
    '-' (45) 27
    '/' (47) 29
    '<' (60) 32
    '=' (61) 31
    '>' (62) 33
    error (256)
    NUMBER (258) 41
    IDENTIF (259) 5 6 40
    INTEGER (260)
    STRING (261) 8 42
    MAIN (262) 7 11
    WHILE (263) 10
    LOOP (264) 10
    DO (265) 10
    SETQ (266) 5
    SETF (267) 6
    DEFUN (268) 7
    PRINT (269) 8
    PRINC (270) 9
    AND (271) 37
    OR (272) 38
    NOT (273) 39
    MOD (274) 30
    E (275)
    MET (276) 34
    GET (277) 35
    DISTINTO (278) 36
    UNARY_SIGN (279)
    IF (280) 17
    PROGN (281) 18 20
    RETURN_FROM (282) 14


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    axioma (38)
        on left: 2
        on right: 0 4
    $@1 (39)
        on left: 1
        on right: 2
    r_axioma (40)
        on left: 3 4
        on right: 2
    sentencia (41)
        on left: 5 6 7 8 9 10 11 12 13 14
        on right: 2 19 21 23 24
    expresion_parentesis (42)
        on left: 15 16
        on right: 5 6 9 10 17 26 27 28 29 30 31 32 33 34 35 36 37 38 39
    if (43)
        on left: 17
        on right: 12
    sentencia_if (44)
        on left: 18 19
        on right: 17
    sentencia_else (45)
        on left: 20 21 22
        on right: 17
    lista_sentencias (46)
        on left: 23 24
        on right: 7 10 18 20 24
    expresion (47)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39
        on right: 13 14 15 16
    operando (48)
        on left: 40 41 42
        on right: 25


State 0

    0 $accept: • axioma $end

    '('  shift, and go to state 1

    axioma  go to state 2


State 1

    2 axioma: '(' • sentencia ')' $@1 r_axioma

    NUMBER       shift, and go to state 3
    IDENTIF      shift, and go to state 4
    STRING       shift, and go to state 5
    MAIN         shift, and go to state 6
    LOOP         shift, and go to state 7
    SETQ         shift, and go to state 8
    SETF         shift, and go to state 9
    DEFUN        shift, and go to state 10
    PRINT        shift, and go to state 11
    PRINC        shift, and go to state 12
    AND          shift, and go to state 13
    OR           shift, and go to state 14
    NOT          shift, and go to state 15
    MOD          shift, and go to state 16
    MET          shift, and go to state 17
    GET          shift, and go to state 18
    DISTINTO     shift, and go to state 19
    IF           shift, and go to state 20
    RETURN_FROM  shift, and go to state 21
    '='          shift, and go to state 22
    '<'          shift, and go to state 23
    '>'          shift, and go to state 24
    '+'          shift, and go to state 25
    '-'          shift, and go to state 26
    '*'          shift, and go to state 27
    '/'          shift, and go to state 28

    sentencia  go to state 29
    if         go to state 30
    expresion  go to state 31
    operando   go to state 32


State 2

    0 $accept: axioma • $end

    $end  shift, and go to state 33


State 3

   41 operando: NUMBER •

    $default  reduce using rule 41 (operando)


State 4

   40 operando: IDENTIF •

    $default  reduce using rule 40 (operando)


State 5

   42 operando: STRING •

    $default  reduce using rule 42 (operando)


State 6

   11 sentencia: MAIN •

    $default  reduce using rule 11 (sentencia)


State 7

   10 sentencia: LOOP • WHILE expresion_parentesis DO lista_sentencias

    WHILE  shift, and go to state 34


State 8

    5 sentencia: SETQ • IDENTIF expresion_parentesis

    IDENTIF  shift, and go to state 35


State 9

    6 sentencia: SETF • IDENTIF expresion_parentesis

    IDENTIF  shift, and go to state 36


State 10

    7 sentencia: DEFUN • MAIN '(' ')' lista_sentencias

    MAIN  shift, and go to state 37


State 11

    8 sentencia: PRINT • STRING

    STRING  shift, and go to state 38


State 12

    9 sentencia: PRINC • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 40
    expresion             go to state 41
    operando              go to state 32


State 13

   37 expresion: AND • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 42
    expresion             go to state 41
    operando              go to state 32


State 14

   38 expresion: OR • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 43
    expresion             go to state 41
    operando              go to state 32


State 15

   39 expresion: NOT • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 44
    expresion             go to state 41
    operando              go to state 32


State 16

   30 expresion: MOD • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 45
    expresion             go to state 41
    operando              go to state 32


State 17

   34 expresion: MET • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 46
    expresion             go to state 41
    operando              go to state 32


State 18

   35 expresion: GET • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 47
    expresion             go to state 41
    operando              go to state 32


State 19

   36 expresion: DISTINTO • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 48
    expresion             go to state 41
    operando              go to state 32


State 20

   17 if: IF • expresion_parentesis sentencia_if sentencia_else

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 49
    expresion             go to state 41
    operando              go to state 32


State 21

   14 sentencia: RETURN_FROM • expresion

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28

    expresion  go to state 50
    operando   go to state 32


State 22

   31 expresion: '=' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 51
    expresion             go to state 41
    operando              go to state 32


State 23

   32 expresion: '<' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 52
    expresion             go to state 41
    operando              go to state 32


State 24

   33 expresion: '>' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 53
    expresion             go to state 41
    operando              go to state 32


State 25

   26 expresion: '+' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 54
    expresion             go to state 41
    operando              go to state 32


State 26

   27 expresion: '-' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 55
    expresion             go to state 41
    operando              go to state 32


State 27

   28 expresion: '*' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 56
    expresion             go to state 41
    operando              go to state 32


State 28

   29 expresion: '/' • expresion_parentesis expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 57
    expresion             go to state 41
    operando              go to state 32


State 29

    2 axioma: '(' sentencia • ')' $@1 r_axioma

    ')'  shift, and go to state 58


State 30

   12 sentencia: if •

    $default  reduce using rule 12 (sentencia)


State 31

   13 sentencia: expresion •

    $default  reduce using rule 13 (sentencia)


State 32

   25 expresion: operando •

    $default  reduce using rule 25 (expresion)


State 33

    0 $accept: axioma $end •

    $default  accept


State 34

   10 sentencia: LOOP WHILE • expresion_parentesis DO lista_sentencias

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 59
    expresion             go to state 41
    operando              go to state 32


State 35

    5 sentencia: SETQ IDENTIF • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 60
    expresion             go to state 41
    operando              go to state 32


State 36

    6 sentencia: SETF IDENTIF • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 61
    expresion             go to state 41
    operando              go to state 32


State 37

    7 sentencia: DEFUN MAIN • '(' ')' lista_sentencias

    '('  shift, and go to state 62


State 38

    8 sentencia: PRINT STRING •

    $default  reduce using rule 8 (sentencia)


State 39

   15 expresion_parentesis: '(' • expresion ')'

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28

    expresion  go to state 63
    operando   go to state 32


State 40

    9 sentencia: PRINC expresion_parentesis •

    $default  reduce using rule 9 (sentencia)


State 41

   16 expresion_parentesis: expresion •

    $default  reduce using rule 16 (expresion_parentesis)


State 42

   37 expresion: AND expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 64
    expresion             go to state 41
    operando              go to state 32


State 43

   38 expresion: OR expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 65
    expresion             go to state 41
    operando              go to state 32


State 44

   39 expresion: NOT expresion_parentesis •

    $default  reduce using rule 39 (expresion)


State 45

   30 expresion: MOD expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 66
    expresion             go to state 41
    operando              go to state 32


State 46

   34 expresion: MET expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 67
    expresion             go to state 41
    operando              go to state 32


State 47

   35 expresion: GET expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 68
    expresion             go to state 41
    operando              go to state 32


State 48

   36 expresion: DISTINTO expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 69
    expresion             go to state 41
    operando              go to state 32


State 49

   17 if: IF expresion_parentesis • sentencia_if sentencia_else

    NUMBER       shift, and go to state 3
    IDENTIF      shift, and go to state 4
    STRING       shift, and go to state 5
    MAIN         shift, and go to state 6
    LOOP         shift, and go to state 7
    SETQ         shift, and go to state 8
    SETF         shift, and go to state 9
    DEFUN        shift, and go to state 10
    PRINT        shift, and go to state 11
    PRINC        shift, and go to state 12
    AND          shift, and go to state 13
    OR           shift, and go to state 14
    NOT          shift, and go to state 15
    MOD          shift, and go to state 16
    MET          shift, and go to state 17
    GET          shift, and go to state 18
    DISTINTO     shift, and go to state 19
    IF           shift, and go to state 20
    RETURN_FROM  shift, and go to state 21
    '='          shift, and go to state 22
    '<'          shift, and go to state 23
    '>'          shift, and go to state 24
    '+'          shift, and go to state 25
    '-'          shift, and go to state 26
    '*'          shift, and go to state 27
    '/'          shift, and go to state 28
    '('          shift, and go to state 70

    sentencia     go to state 71
    if            go to state 30
    sentencia_if  go to state 72
    expresion     go to state 31
    operando      go to state 32


State 50

   14 sentencia: RETURN_FROM expresion •

    $default  reduce using rule 14 (sentencia)


State 51

   31 expresion: '=' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 73
    expresion             go to state 41
    operando              go to state 32


State 52

   32 expresion: '<' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 74
    expresion             go to state 41
    operando              go to state 32


State 53

   33 expresion: '>' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 75
    expresion             go to state 41
    operando              go to state 32


State 54

   26 expresion: '+' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 76
    expresion             go to state 41
    operando              go to state 32


State 55

   27 expresion: '-' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 77
    expresion             go to state 41
    operando              go to state 32


State 56

   28 expresion: '*' expresion_parentesis • expresion_parentesis

    NUMBER    shift, and go to state 3
    IDENTIF   shift, and go to state 4
    STRING    shift, and go to state 5
    AND       shift, and go to state 13
    OR        shift, and go to state 14
    NOT       shift, and go to state 15
    MOD       shift, and go to state 16
    MET       shift, and go to state 17
    GET       shift, and go to state 18
    DISTINTO  shift, and go to state 19
    '='       shift, and go to state 22
    '<'       shift, and go to state 23
    '>'       shift, and go to state 24
    '+'       shift, and go to state 25
    '-'       shift, and go to state 26
    '*'       shift, and go to state 27
    '/'       shift, and go to state 28
    '('       shift, and go to state 39

    expresion_parentesis  go to state 78
    expresion             go to state 41
    operando              go to state 32


State 57

   29 expresion: '/' expresion_parentesis • expresion_parentesis
